<resources>
    <string name="app_name">Amapp</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">REGISTER</string>
    <string name="click_here_to_login">click here to login</string>
    <string name="click_here_to_register">click here to register</string>
    <string name="logout">LOGOUT</string>
    <string name="add_class">Add Class</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_new_class_title">Add new class</string>
    <string name="edit01">Class Name</string>
    <string name="edit02">Subject Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="click_to_add_a_new_class">Click \'+\' to add a new Class</string>
    <string name="userid">UserID:</string>
    <string name="confirm_password">confirm password</string>
</resources>