<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarmain"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:text="@string/click_to_add_a_new_class"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/fab_color"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:contentDescription="@string/add_new_item"
        app:srcCompat="@drawable/baseline_add_24"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E57373"
            android:textColor="@color/white"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_alignParentTop="true"
            android:textSize="15sp"
            app:cornerRadius="20dp"
            android:text="@string/logout"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarmain"
        android:id="@+id/recycler_view"
        />

</RelativeLayout>