<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"

            android:padding="16dp">

            <TextView
                android:id="@+id/title_add_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_class_title"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="9dp"
                android:background="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.widget.Button
                        android:id="@+id/cancel_btn"
                        android:layout_marginStart="8dp"
                        android:layout_weight=".40"
                        android:layout_width="0dp"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cancel_button_style_bg"
                        android:text="@string/cancel"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".20"/>

                    <android.widget.Button
                        android:id="@+id/add_btn"
                        android:layout_marginEnd="8dp"
                        android:layout_weight=".40"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_button_style_bg"
                        android:text="@string/add"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>